validation for empty or null Ip

--- a/webApp/src/app/components/shared/header/whitelists/whitelists.component.html
+++ b/webApp/src/app/components/shared/header/whitelists/whitelists.component.html
@@ -7,7 +7,7 @@
     <div class="p-dialog-inner">
       <div class="ip-boxer">
         <div class="ip-top">
-          <div class="form-group row" *ngIf="whitelists?.length > 0">
+          <div class="form-group row" *ngIf="whitelists?.length > 0 || addNewIp == true">
             <label class="col-md-3">Add New Ip</label>
             <!-- <p-inputMask [(ngModel)]="listItems" required=true class="form-control col-md-5" mask="99.99.99.999"></p-inputMask> -->
             <input type="text" [required]="true" class="form-control col-md-5" [(ngModel)]="listItems">
@@ -30,8 +30,9 @@
             </div>
             <div class="ip-bottom text-center">
               <div class="btn-group">
-                <button type="button" class="btn btn-green" *ngIf="whitelists?.length == 0" (click)="addWhiteListIp(listItems)">Add</button>
-                <button type="button" *ngIf="whitelists?.length > 0" class="btn btn-green" (click)="updateWhiteListIp()">Save</button>
+                <button type="button" class="btn btn-green" *ngIf="addNewIp != true" (click)="addNewWhiteListIp()">Add New Ip</button>
+                <button type="button" *ngIf="whitelists?.length > 0 || enableBtnForDeleted || addNewIp == true" [disabled]="disableSave()"
+                  class="btn btn-green btn-footer" (click)="updateWhiteListIp()">Save</button>
               </div>
             </div>
             <hr>
@@ -49,9 +50,10 @@
                   <tbody>
                     <tr *ngFor="let item of connectedList;let i = index">
                       <td>
-                        <span *ngIf="item?.whitelisted==true">
-                          <img src="/assets/images/accept.png" alt="n">
-                        </span>
+                        <span [ngClass]="{'icon-whitelist':(item?.whitelisted == true)}"></span>
+                        <!-- <span *ngIf="item?.whitelisted==true"> -->
+                        <!-- <img src="/assets/images/accept.png" alt="noimage"> -->
+                        <!-- </span> -->
                       </td>
                       <td>{{item.ip}}</td>
                       <td>{{item.count}}</td>
